--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 title: AI4FUN
-subtitle: Il blog di Alessandro Spilotros
+subtitle: Alessandro Spilotros' blog (UNDER CONSTRUCTION)
 ---
 
